Adding Bower and Grunt components to pull JQuery from an appropriate source. Addressing PR Comments.

--- a/samples/MvcSample.Web/project.json
+++ b/samples/MvcSample.Web/project.json
@@ -29,5 +29,17 @@
             "dependencies": { }
         }
     },
+    "exclude": [
+        "wwwroot",
+        "node_modules",
+        "bower_components"
+    ],
+    "packExclude": [
+        "node_modules",
+        "bower_components",
+        "**.kproj",
+        "**.user",
+        "**.vspscc"
+    ],
     "webroot": "wwwroot"
 }
