--- a/src/Microsoft.AspNet.Mvc.Core/project.json
+++ b/src/Microsoft.AspNet.Mvc.Core/project.json
@@ -16,9 +16,10 @@
     "Microsoft.AspNet.Security.DataProtection": "1.0.0-*",
     "Microsoft.Framework.CopyOnWriteDictionary.Internal": { "version": "1.0.0-*", "type": "build" },
     "Microsoft.Framework.NotNullAttribute.Internal": { "version": "1.0.0-*", "type": "build" },
+    "Microsoft.Framework.Runtime.Interfaces": "1.0.0-*",
+    "Microsoft.AspNet.Cors.Core": "1.0.0-*",
     "Microsoft.Framework.PropertyActivator.Internal": { "version": "1.0.0-*", "type": "build" },
     "Microsoft.Framework.PropertyHelper.Internal": { "version": "1.0.0-*", "type": "build" },
-    "Microsoft.Framework.Runtime.Interfaces": "1.0.0-*"
   },
   "frameworks": {
     "aspnet50": {},
